# PyDotBot

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  AUTHORS  Dockerfile  LICENSE.txt  README.md  asset-manifest.json  botcontroller.py  build_requirements.txt  config_sample.toml  dotbot_cmd.py  dotbots.toml  entrypoint.sh  index.html  keyboard_example.py  pyproject.toml  requirements.txt  server.py  setup.cfg  simulator_init_state.toml  tests_requirements.txt  tox.ini
.github/: release.yml
.github/workflows/: continuous-integration.yml  pytest.yml
bot_controller/: bc_serial.py  controller.py  factory.py  hdlc.py  joystick.py  keyboard.py  lighthouse2.py  main.py  models.py  protocol.py  serial_interface.py  server.py
bot_controller/frontend/: .env  .env.test  package-lock.json  package.json
bot_controller/frontend/public/: index.html
bot_controller/frontend/src/: DotBots.js  DotBots.test.js  DotBotsMap.js  Joystick.js  Joystick.test.js  rest.js
bot_controller/html/: index.html
bot_controller/html/js/: dotbots.js
bot_controller/lib/: lh2.c
bot_controller/tests/: test_controller.py  test_factory.py  test_hdlc_handler.py  test_lighthouse2.py  test_main.py  test_protocol.py  test_server.py
doc/: Makefile  api.rst  conf.py  getting_started.md  index.md  mqtt.md  requirements.txt  rest.md
doc/_static/: switcher.json
doc/api/: dotbot.adapter.rst  dotbot.controller.rst  dotbot.controller_app.rst  dotbot.dotbot_simulator.rst  dotbot.edge_gateway.rst  dotbot.edge_gateway_app.rst  dotbot.hdlc.rst  dotbot.joystick.rst  dotbot.keyboard.rst  dotbot.lighthouse2.rst  dotbot.logger.rst  dotbot.main.rst  dotbot.models.rst  dotbot.mqtt.rst  dotbot.orca.rst  dotbot.protocol.rst  dotbot.rest.rst  dotbot.rst  dotbot.sailbot_simulator.rst  dotbot.serial_interface.rst  dotbot.server.rst  dotbot.vec2.rst
dotbot/: __init__.py  adapter.py  authz.py  calibration_exporter.py  controller.py  controller_app.py  crypto.py  csv_data_logger.py  default_config.toml  dotbot_simulator.py  edge_gateway.py  edge_gateway_app.py  fauxbot.py  hdlc.py  joystick.py  keyboard.py  lighthouse2.py  logger.py  main.py  models.py  mqtt.py  orca.py  protocol.py  qrkey.py  qrkey_app.py  rest.py  sailbot_simulator.py  serial_interface.py  server.py  vec2.py  websocket.py
dotbot/datastructures/: __init__.py  config.py
dotbot/demo/: __init__.py  default_config.toml  demo_http.py
dotbot/demo/static/: virtualjoystick.js
dotbot/demo/views/: index.html
dotbot/examples/: README.md  charging_station.py  charging_station_init_state.toml  charging_station_poc.py  dotbot_api.py  orca.py  sct.py  stop.py  vec2.py
dotbot/examples/charging_station/: README.md  __init__.py  charging_station.py  charging_station_init_state.toml
dotbot/examples/common/: __init__.py  orca.py  sct.py
dotbot/examples/labyrinth/: README.md  init_simulator_state.toml  labyrinth.py
dotbot/examples/minimum_naming_game/: README.md  controller.py  controller_with_motion.py  gen_init_pos.py  gen_init_pose.py  init_state.toml  init_state_with_motion.toml  minimum_naming_game.py  minimum_naming_game_with_motion.py  walk_avoid.py
dotbot/examples/minimum_naming_game_with_motion/: controller.py  init_state.toml  minimum_naming_game_with_motion.py  walk_avoid.py
dotbot/examples/motions/: README.md  motions.py
dotbot/examples/work_and_charge/: README.md  controller.py  gen_init_pose.py  init_state.toml  work_and_charge.py
dotbot/frontend/: .env  .env.example  .env.test  config-overrides.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
dotbot/lib/: .gitignore  CMakeLists.txt  lh2.c
dotbot/localization/: lighthouse.py
dotbot/new-frontend/: .eslintrc.cjs  README.md  bun.lockb  package-lock.json  package.json  tsconfig.json  vite.config.ts
dotbot/orchestrator/: __init__.py  default_config.toml  dotbot.py  gateway.py
dotbot/pin_code_ui/: .env  .env.test  package-lock.json  package.json
dotbot/tests/: test_adapter.py  test_controller.py  test_controller_app.py  test_experiment_charging_station.py  test_hdlc_handler.py  test_joystick_main.py  test_keyboard_main.py  test_lighthouse2.py  test_main.py  test_protocol.py  test_qrkey.py  test_qrkey_app.py  test_rest.py  test_server.py
dotbots/: controller.py  hdlc.py  joystick.py  keyboard.py  lighthouse2.py  main.py  server.py
dotbots/frontend/: package-lock.json
dotbots/lib/: Makefile
dotbots/tests/: test_controller.py  test_hdlc_handler.py  test_lighthouse2.py  test_main.py  test_protocol.py  test_server.py
examples/: keyboard_example.py
server/: api.py
static/css/: main.0175017f.css  main.0175017f.css.map  main.31dc0b2a.css  main.31dc0b2a.css.map  main.bc44462f.css  main.bc44462f.css.map  main.d72e9176.css  main.d72e9176.css.map  main.dab78764.css  main.dab78764.css.map  main.e33249c6.css  main.e33249c6.css.map  main.f3057d29.css  main.f3057d29.css.map
static/js/: main.19d8538c.js  main.1c5afbc3.js  main.1c5afbc3.js.LICENSE.txt  main.1e1a85ec.js  main.22322bba.js  main.22322bba.js.LICENSE.txt  main.366fd464.js  main.366fd464.js.LICENSE.txt  main.58eff700.js  main.58eff700.js.LICENSE.txt  main.5ae817f0.js  main.6425aa1a.js  main.83283c16.js  main.88591fd4.js  main.886fbd36.js  main.8f9cbe5e.js  main.996606fc.js  main.a04c8e0a.js  main.a89fa3bd.js  main.ae3ccc84.js  main.afc0e520.js  main.afc0e520.js.LICENSE.txt  main.b3237349.js  main.b8d3a7ab.js  main.b8d3a7ab.js.LICENSE.txt  main.d01758c6.js  main.d03b8540.js
tests/: conftest.py  testUtils.py
tests/unit/: test_dummy_unit.py  test_hdlc.py
utils/: falso_edhoc_initiator.py
utils/calibration/: README.md  generate_calibration_data.py
utils/control_loop/: CMakeLists.txt  README.md
utils/hooks/: __init__.py  build.py  pydotbot_utils.py  sdist.py  webapp.py  wheel.py
utils/logs/: README.md  analyze_delays.py  requirements.txt
utils/sim_to_real/: .gitignore  plot_battery_fidelity.py  plot_encoder_fidelity.py  plot_fidelity.py  plot_position_fidelity.py  requirements.txt  train_battery_model.py  train_gru.py  train_position_model.py
(+129 files in other folders)
