[build-system]
requires = [
    "hatchling>=1.4.1",
    "cibuildwheel",
    "cmake",
    "ninja",
]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "dotbot/frontend/*",
    "dotbot/lib/*",
    "*.py"
]
exclude = [
    "dotbot/frontend/node_modules",
]

[tool.hatch.build.targets.sdist.hooks.custom]
path = "utils/hooks/sdist.py"

[tool.hatch.build.targets.wheel.hooks.custom]
path = "utils/hooks/wheel.py"

[project]
name = "pydotbot"
version = "0.23.0"
authors = [
    { name="Alexandre Abadie", email="alexandre.abadie@inria.fr" },
    { name="Theo Akbas", email="theo.akbas@inria.fr" },
    { name="Filip Maksimovic", email="filip.maksimovic@inria.fr" },
    { name="Said Alvarado-Marin", email="said-alexander.alvarado-marin@inria.fr" },
    { name="Mališa Vučinić", email="malisa.vucinic@inria.fr" },
    { name="Diego Badillo", email="diego.badillo@sansano.usm.cl" },
]
dependencies = [
    "click          == 8.1.7",
    "fastapi        == 0.115.0",
    "haversine      == 2.8.0",
    "httpx          == 0.27.2",
    "numpy          == 2.1.1",
    "opencv-python  == 4.10.0.84",
    "pygame         == 2.6.1",
    "pynput         == 1.7.6",
    "pyserial       == 3.5",
    "qrkey          == 0.9.1",
    "structlog      == 24.4.0",
    "uvicorn        == 0.32.0",
    "websockets     == 13.1",
    "gmqtt          >= 0.7.0",
]
description = "Package to easily control your DotBots and SailBots."
readme = "README.md"
license = { text="BSD" }
requires-python = ">=3.7"
classifiers = [
    'Programming Language :: C',
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
]

[project.urls]
"Homepage" = "https://github.com/DotBots/PyDotBot"
"Bug Tracker" = "https://github.com/DotBots/PyDotBot/issues"

[project.scripts]
dotbot-controller = "dotbot.controller_app:main"
dotbot-edge-gateway = "dotbot.edge_gateway_app:main"
dotbot-keyboard = "dotbot.keyboard:main"
dotbot-joystick = "dotbot.joystick:main"

[tool.ruff]
lint.select = ["E", "F"]
line-length = 88
lint.ignore = ["E501"]

[tool.isort]
multi_line_output = 3  # Use Vertical Hanging Indent
profile = "black"
