[metadata]
name                              = pydotbot
version                           = attr: dotbot.VERSION.VERSION
author                            = José Astorga
author_email                      = jose.n.astorga.tobar@gmail.com
description                       = DotBot Orchestrator comunicate multiple DotBots to internet.
long_description                  = file: README.md
long_description_content_type     = text/markdown
url                               = http://www.crystalfree.org/
project_urls                      =
    Source Code                   = https://github.com/DotBots/PyDotBot
    Bug Tracker                   = https://github.com/DotBots/PyDotBot/issues
classifiers                       =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
packages                          = 
    dotbot.orchestrator
    dotbot.orchestrator.server
    dotbot.orchestrator.openhdlc
    dotbot.localization
    dotbot.datastructures

install_requires                  =
    Flask>=1.1.2
    Flask-Bootstrap>=3.3.7.1
    Flask-Classful>=0.14.2
    Flask-Cors>=3.0.10    
    Flask-MQTT>=1.1.1     
    Flask-SocketIO>=5.1.1
    numpy>=1.20.3
    paho-mqtt>=1.5.1
    pyserial>=3.5
    setuptools>=58.0.4
    toml>=0.10.2

[options.package_data]
dotbot.orchestrator               = *.toml, server/static/js/*,  server/static/css/*, server/templates/*

[options.entry_points]
console_scripts                   =
    orchestrator_http             = dotbot.orchestrator.server:main_app